--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,95 @@
-CMakeLists.txt.user
+# -------------------------
+# Build / Compile Artifacts
+# -------------------------
+/build/
+/build-*/
+/cmake-build-*/
+/dist/
+/out/
+
+# CMake Generated Files
 CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
+CMakeFiles/
+CMakeScripts/
 cmake_install.cmake
-install_manifest.txt
-compile_commands.json
 CTestTestfile.cmake
-_deps
+CTestTestfile.cmake
+CTestTestfile.cmake
+CTestTestfile.cmake
+CTestTestfile.cmake
+CTestCustom.cmake
+CTestCostData.txt
+CTestTestfile.cmake
+install_manifest.txt
+Makefile
+compile_commands.json
 CMakeUserPresets.json
 
-# CLion
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#cmake-build-*
+# CMake Preset Generated Configs
+*.cmake
+!CMakeLists.txt
+!Catch2.cmake
+CMakePresets.json.user
+CMakeLists.txt.user
+
+# CMake FetchContent deps
+_deps/
+
+# Ninja Build Files
+.ninja_deps
+.ninja_log
+build.ninja
+rules.ninja
+
+# Generated Libraries / Binaries
+*.a
+*.la
+*.so
+*.so.*
+*.dylib
+*.dll
+*.lib
+*.exe
+*.pdb
+*.obj
+*.o
+
+# --------------
+# VSCode files
+# --------------
+.vscode/
+!.vscode/settings.json
+!.vscode/launch.json
+!.vscode/tasks.json
+
+# VSCode CMake Tools stuff
+cmake-tools-kits.json
+
+# ----------------
+# macOS Junk Files
+# ----------------
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# ----------------
+# Testing / Output
+# ----------------
+Testing/
+test_results/
+test_output/
+
+# ----------------
+# Logs / Temp
+# ----------------
+*.log
+*.tmp
+*.cache
+*.swp
+*.swo
+
+# ----------------
+# CLion / JetBrains
+# ----------------
+.idea/
+cmake-build-*/
