--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.20)
 
 add_executable(stress_example example.cpp)
-target_link_libraries(stress_example PRIVATE stress_reflection)
+target_link_libraries(stress_example PRIVATE stress)
