--- a/stress/CMakeLists.txt
+++ b/stress/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 
-add_library(stress_reflection INTERFACE)
-target_include_directories(stress_reflection INTERFACE include)
+add_library(stress INTERFACE)
+
+target_include_directories(stress INTERFACE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
